--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="card2">
                     <div class="card2-content">
-                        <h3>Praying For Your Success 🫶🏼🧿💕</h3>
+                        <h3>Wishing You Success 🫶🏼🧿💕</h3>
                         <h2>Happy birthday 🥳🎂🥳 Jaan the day you come into my life I was not really much attached to
                             you but day by day you became close to my heart . And now you are truly my younger sister. I
                             wish I could remove some of the pain from your life which you are bearing alone. But you're
@@ -161,7 +161,7 @@
 <script>
     let datetxt = "10 February";
     let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
-    let titleLetter = "To yPraying For Your Success 🫶🏼🧿💕";
+    let titleLetter = "Wishinh You Success 🫶🏼🧿💕";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
     let charArrTitle = titleLetter.split('');
