--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                     <div class="card2-content">
                         <h3>Wishing You Success 🫶🏼🧿💕</h3>
                         <h2>Happy birthday 🥳🎂🥳 Jaan the day you come into my life I was not really much attached to
-                            you but day by day you became close to my heart . And now you are truly my younger sister. I
+                            you but day by day you became close to my heart . And now you are truly my love. I
                             wish I could remove some of the pain from your life which you are bearing alone. But you're
                             always welcome 🤗 you can talk anytime you want to talk specially those which you can't say
                             to others. And this year your all dreams come true . I wish that your
-                            brother could wish you but if couldn't wish on him behalf I am wishing you happy birthday
+                            love could wish you but if couldn't wish on him behalf I am wishing you happy birthday
                             🎈🎂🎈 . Don't be Sad ok be happy 😌
                         </h2>
 
